--- a/invessence/modules/web/src/main/webapp/template/html/HTMLTemplate-SignUp.html
+++ b/invessence/modules/web/src/main/webapp/template/html/HTMLTemplate-SignUp.html
@@ -76,27 +76,7 @@
                             <li>Click &quot;Submit&quot;.</li>
                         </ol>
 
-                        <p><a href="'2'/register.xhtml?u='3'&amp;r='4'" target="_blank">Let&#39;s start.</a>.</p>
-                    </td>
-                    <td colspan="6" style="background-color: #fff">
-                        <table align="center" bgcolor="#009abb" border="0" cellpadding="6" cellspacing="1" width="200">
-                            <tbody>
-                            <tr>
-                                <td colspan="6" style="text-align: center; background-color: #009abb; font-color: #ffffff; align: center"><span style="font-size: 16px"><strong>Invest For What&#39;s Next<span style="display: none">&nbsp;</span></strong></span></td>
-                            </tr>
-                            <tr>
-                                <td colspan="6" style="background-color: #fff">
-                                    <p>We create and manage a personalized investment plan for you.</p>
-
-                                    <ul>
-                                        <li><strong><span style="font-size: 16px">Smart</span></strong></li>
-                                        <li><strong><span style="font-size: 16px">Simple</span></strong></li>
-                                        <li><strong><span style="font-size: 16px">Supportive&nbsp;</span></strong></li>
-                                    </ul>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <p><a href="'2'/register.xhtml?u='3'&r='4'" target="_blank">Let&#39;s start.</a>.</p>
                     </td>
                 </tr>
                 </tbody>
