--- a/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
@@ -24,14 +24,14 @@
                     <li class="fa fa-ellipsis-v menu-separator"></li>
                     <li>
                         <ui:fragment rendered="#{uiportal.hasAccessMenu('ADVISOR')}">
-                            <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{uiportal.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
+                            <a class="Animated05 CursPointer"><i class="fa fa-cog"></i> Setting</a>
                             <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
                                 <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{uiportal.username}</span></a></li>
                                 <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
                             </ul>
                         </ui:fragment>
                         <ui:fragment rendered="#{! uiportal.hasAccessMenu('ADVISOR')}">
-                            <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{uiportal.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
+                            <a class="Animated05 CursPointer"><i class="fa fa-cog"></i> Setting</a>
                             <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
                                 <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{uiportal.username}</span></a></li>
                                 <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
