--- a/tcm/modules/web/src/main/webapp/template/common/layoutmenu.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/layoutmenu.xhtml
@@ -15,7 +15,7 @@
 
             <p:submenu label="Account" icon="fa fa-file-text-o">
                 <p:menuitem value="New" icon="fa fa-plus-square"
-                            actionListener="#{uiLayout.doMenuAction('/consumer/cadd.xhtml?acct=0')}"/>
+                            actionListener="#{uiLayout.doMenuAction('/consumer/cadd.xhtml')}"/>
                 <p:menuitem value="Management" icon="fa fa-institution" rendered="false"
                             actionListener="#{uiLayout.doMenuAction('https://www.clientam.com/Universal/servlet/AccountAccess.Login?partnerID=Invessence')}"/>
                 <p:menuitem value="Account Aggregation" icon="fa fa-plus-square"
