--- a/tcm/modules/web/src/main/webapp/template/common/sharedDialog.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/sharedDialog.xhtml
@@ -5,7 +5,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <ui:composition>
-    <p:confirmDialog id="confirmationDialogID" message="#{menu.forwardcustodianURL}"
+    <p:confirmDialog id="confirmationDialogID" message="#{uiLayout.uiprofile.forwardURL}"
                      header="Exiting this site" severity="alert"
                      widgetVar="confirmDlgVar">
 
