LTAM version 3,0 - Patch July 2, 2016

--- a/ltam/modules/web/src/main/webapp/template/html/activate.htm
+++ b/ltam/modules/web/src/main/webapp/template/html/activate.htm
@@ -150,12 +150,19 @@
                             <br/><br/>
                             <p>Thank you for setting up your account on Symbil.</p>
 
-                            <p>Please <a href="'0'/activate.xhtml?u='1'&r='2'" target="_symbil">click here to activate
-                                your account</a>.</p>
-
                             <p>
+                            <h4>Your UserID: '1'</h4>
+                            </p>
 
-                            </p></td>
+                            <p>Please <a href="'0'/activate.xhtml?u='1'&r='2'" target="_symbil">click here to activate
+                                your account</a>.
+                            </p>
+                            <p>
+                                After you have activated the account, you will need to use the above UserID
+                                to access your account.
+                            </p>
+
+                        </td>
                     </tr>
                     </tbody>
                 </table>
