--- a/ltam/modules/web/src/main/webapp/template/spark/layoutmenu.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/spark/layoutmenu.xhtml
@@ -2,73 +2,29 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ps="http://primefaces.org/spark"
     xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui">
-    
-    <ps:menu>
-        <f:facet name="options">
-            <p:commandButton type="button" icon="fa fa-search Fs18 white" class="Fright"/>
-            <p:inputText placeholder="Search" class="Fright"/>    
-        </f:facet>
-        
-        <p:submenu label="Spark Theme" icon="fa fa-rocket">
-            <p:menuitem value="Forms" icon="fa fa-file-text-o" outcome="/spark/forms.xhtml" />
-            <p:menuitem value="Data Components" icon="fa fa-calendar-o" outcome="/spark/data.xhtml" />
-            <p:menuitem value="DataTable" icon="fa fa-list-alt" outcome="/spark/datatable.xhtml" />
-            <p:menuitem value="Panels" icon="fa fa-columns" outcome="/spark/panel.xhtml" />
-            <p:menuitem value="Overlays" icon="fa fa-image" outcome="/spark/overlay.xhtml" />
-            <p:menuitem value="Menus" icon="fa fa-align-justify" outcome="/spark/menu.xhtml" />
-            <p:menuitem value="Messages" icon="fa fa-comments-o" outcome="/spark/messages.xhtml" />
-            <p:menuitem value="FileUpload" icon="fa fa-cloud-upload" outcome="/spark/file.xhtml" />
-            <p:menuitem value="Misc" icon="fa fa-stack-overflow" outcome="/spark/misc.xhtml" />
-        </p:submenu>
-            
-        <p:separator />
-        
-        <p:submenu label="Default Pages" icon="fa fa-newspaper-o">
-            <p:menuitem value="Empty Page" icon="fa fa-plus-square" outcome="/spark/empty-page.xhtml" />
-            <p:menuitem value="Login Page" icon="fa fa-sign-in" outcome="/spark/login.xhtml" />
-            <p:menuitem value="Error Page" icon="fa fa-exclamation-circle" outcome="/spark/error.xhtml" />
-            <p:menuitem value="404 Page" icon="fa fa-times" outcome="/spark/404.xhtml" />
-            <p:menuitem value="Access Denied Page" icon="fa fa-eye-slash" outcome="/spark/access-denied.xhtml" />
-        </p:submenu>
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:pm="http://primefaces.org/modena">
 
-        <p:separator />
-        
-        <p:submenu label="Menu Hierarchy" icon="fa fa-sitemap">
-            <p:submenu label="Submenu 1" icon="fa fa-folder">
-                <p:submenu label="Submenu 1.1" icon="fa fa-folder">
-                    <p:submenu label="Submenu 1.2" icon="fa fa-folder">
-                        <p:menuitem value="Link 1" class="fa fa-chain" url="#" />
-                        <p:menuitem value="Link 2" class="fa fa-chain" url="#" />
-                        <p:menuitem value="Link 3" class="fa fa-chain" url="#" />
-                    </p:submenu>
-                </p:submenu>
-            </p:submenu>
-            <p:submenu label="Submenu 2" icon="fa fa-folder">
-                <p:submenu label="Submenu 1.2" icon="fa fa-folder">
-                    <p:submenu label="Submenu 2.2" icon="fa fa-folder">
-                        <p:menuitem value="Link 1" class="fa fa-chain" url="#" />
-                        <p:menuitem value="Link 2" class="fa fa-chain" url="#" />
-                        <p:menuitem value="Link 3" class="fa fa-chain" url="#" />
-                    </p:submenu>
-                </p:submenu>
-            </p:submenu>
-        </p:submenu>
-        
-        <p:separator />
-        
-        <p:submenu label="Links" icon="fa fa-dropbox">
-            <p:menuitem value="Font Icons" icon="fa fa-paint-brush" outcome="/spark/font-icons.xhtml"/>
-            <p:menuitem value="User Profile" icon="fa fa-users" url="#"/>
-            <p:menuitem value="Tasks" icon="fa fa-history" url="#"/>
-            <p:menuitem value="Contact" icon="fa fa-microphone" url="#"/>
-        </p:submenu>
-        
-        <p:separator />
-        
-        <p:menuitem value="Documentation" icon="fa fa-life-ring" outcome="/spark/documentation.xhtml" />
-    </ps:menu>
+    <div class="Animated05" id="layout-menu-cover">
+        <h:form>
+        <pm:menu>
+            <p:menuitem id="home" value="Home" icon="icon-home" outcome="/index.xhtml"
+                        rendered="#{! webutil.isUserLoggedIn()}"/>
+            <p:menuitem id="rm_faq2" value="FAQ" icon="icon-question_answer" outcome="/static/faq.xhtml"
+                    rendered="#{! webutil.isUserLoggedIn()}"/>
+            <p:menuitem id="rm_about" value="About us" icon="icon-people" outcome="/static/aboutus.xhtml"
+                    rendered="#{! webutil.isUserLoggedIn()}"/>
+            <p:menuitem id="logon" value="Login" icon="icon-https" outcome="/login.xhtml"
+                        rendered="#{! webutil.isUserLoggedIn()}"/>
+            <p:menuitem id="dash" value="Dashboard" icon="icon-dashboard" actionListener="#{uiLayout.goToStartPage}"
+                        rendered="#{webutil.isUserLoggedIn()}"/>
+            <p:menuitem id="logout" value="Logout" icon="icon-lock_open" actionListener="#{uiLayout.logout}"
+                        rendered="#{webutil.isUserLoggedIn()}"/>
+        </pm:menu>
+
+        </h:form>
+
+    </div>
 
 </ui:composition>
