--- a/ltam/modules/web/src/main/webapp/template/spark/template.xhtml
+++ b/ltam/modules/web/src/main/webapp/template/spark/template.xhtml
@@ -5,50 +5,82 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
-    <h:head>
-        <f:facet name="first">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-            <meta name="apple-mobile-web-app-capable" content="yes" />
-        </f:facet>
-        <title>Invessence</title>
-        <h:outputScript name="js/layout.js" library="spark-layout" />
+<h:head>
+    <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+    </f:facet>
+    <title>Symbil</title>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+    <h:outputScript name="js/ripple-effect.js" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputScript name="js/perfect-scrollbar.js" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputScript name="js/layout.js" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputScript name="js/googleanalytics.js" library="invessence"/>
 
-        <ui:insert name="head" />
-    </h:head>
+    <ui:insert name="head"/>
+</h:head>
 
-    <h:body>    
-        <div id="menu-mask"></div>
+<h:body class="GrayModena">
 
-        <ui:include src="/template/spark/topbar.xhtml" />
+    <ui:include src="/template/common/topbar.xhtml"/>
 
-        <ui:include src="/template/spark/layoutmenu.xhtml" />
+    <div id="wrapper">
+        <div id="wrapperIndent">
 
-        <div id="layout-portlets-cover">
-            <ui:insert name="content">
-                Template
-            </ui:insert>
+            <ui:include src="/template/common/layoutmenu.xhtml"/>
 
-            <div class="layout-portlets-box TexAlCenter">
-                <span class="Fs14 gray FontRalewayRegular">Invessence  |   All rights reserved.</span>
+            <div id="layout-portlets-cover">
+                <div class="Container96 Fnone MarAuto">
+
+                    <ui:insert name="content">
+                        Template
+                    </ui:insert>
+
+                    <!-- footer -->
+                    <div id="layout-portlets-cover">
+                        <div class="Container100">
+                            <div class="ContainerIndent TexAlCenter Fs14 BoldGray">
+                                <div class="ShowOnDesktopTablet">
+                                    <div id="thawteseal" style="text-align:center;"
+                                         title="Click to Verify - This site chose Thawte SSL for secure e-commerce and confidential communications.">
+                                        <div>
+                                            <script type="text/javascript"
+                                                    src="https://seal.thawte.com/getthawteseal?host_name=symbil.com&amp;size=S&amp;lang=en"></script>
+                                        </div>
+                                    </div>
+                                </div>
+                               Powered by <i class="fa fa-copyright"></i>Invessence<br/>
+                                <i class="fa fa-copyright"></i>#{uiLayout.uiprofile.companyname} - All rights reserved.
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
+            <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
+                <f:facet name="start">
+                    <p:graphicImage name="images/preloader.gif" library="#{uiLayout.uiprofile.themelib}"/>
+                </f:facet>
+
+                <f:facet name="complete">
+                    <h:outputText value=""/>
+                </f:facet>
+            </p:ajaxStatus>
         </div>
+    </div>
 
-        <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
-            <f:facet name="start">
-                <p:graphicImage name="images/preloader.gif" />
-            </f:facet>
-
-            <f:facet name="complete">
-                <h:outputText value="" />
-            </f:facet>
-        </p:ajaxStatus>
-
-        <h:outputStylesheet name="css/core-layout.css" library="spark-layout" />
-        <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
-        <h:outputStylesheet name="css/animate.css" library="spark-layout" />
-        <h:outputStylesheet name="css/spark-layout.css" library="spark-layout" />
-    </h:body>
+    <h:outputStylesheet name="css/core-layout.css" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputStylesheet name="css/animate.css" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputStylesheet name="css/modena-font.css" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputStylesheet name="css/ripple-effect.css" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputStylesheet name="css/font-awesome.css" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputStylesheet name="css/modena-layout.css" library="#{uiLayout.uiprofile.themelib}"/>
+    <h:outputStylesheet name="css/ltam.css" library="ltam"/>
+    <h:outputStylesheet name="css/invessence.css" library="invessence"/>
+</h:body>
 
 </html>
