--- a/tcm/modules/web/src/main/webapp/resources/spark-layout/css/core-layout.css
+++ b/tcm/modules/web/src/main/webapp/resources/spark-layout/css/core-layout.css
@@ -134,6 +134,7 @@ input[type="text"], input[type="password"], textarea{ -webkit-appearance: none; 
 .Wid50{ width:50%;}
 .Wid45{ width:45%;}
 .Wid40{ width:40%;}
+.Wid35{ width:35%;}
 .Wid30{ width:30%;}
 
 /* Width Special Values */
