--- a/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -36,6 +36,7 @@
         -->
 
         <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
+        <h:outputStylesheet name="css/custom.css" library="spark-layout"/>
         <h:outputStylesheet name="css/font-awesome.css" library="spark-layout"/>
         <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
         <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
