--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -5,7 +5,12 @@
 * Copyright 2016 - Invessence */
 
 /* Logo*/
-#logo{height:70px; margin-top:16px;}
+#logo{height:70px; margin-top:4px;}
+
+@media (min-width: 960px) {
+    #logo{margin-bottom: 25px;}
+}
+
 
 img.riskImage {
     opacity: 0.5;
@@ -90,6 +95,11 @@ img.riskImage:hover {
 .ui-steps .ui-state-disabled .ui-steps-number {
     background-color: #00D404 !important;
 }
+/*Prakash*/
+* {
+    font-family: 'ralewayregular';
+}
+/**/
 
 /*vivek CSS */
 
@@ -114,7 +124,9 @@ img.riskImage:hover {
 /*vivek CSS */
 /* Large desktop */
 @media (min-width: 960px) and (max-width: 1300px) {
-    #logo{height:70px;}
+    #logo{height:70px;
+        margin-top: 4px;/**/
+    }
     .ui-steps .ui-steps-title {
         width: 70px !important
     }
@@ -143,7 +155,9 @@ img.riskImage:hover {
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 640px) and (max-width: 730px) {
-    #logo{height:70px; margin-top:6px;}
+    #logo{height:70px;
+        margin-top:4px;/**/
+    }
     .ui-steps .ui-steps-title {
         width: 30px !important
     }
@@ -159,7 +173,7 @@ img.riskImage:hover {
 
 /* Landscape phone to portrait tablet */
 @media (min-width: 480px) and (max-width: 640px) {
-    #logo{height:40px; margin-top:6px;}
+    #logo{height:40px; margin-top:11px;} /**/
     .ui-steps .ui-steps-title {
         width: 20px !important
     }
