commiting TCM Project - Prakash

--- a/tcm/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/tcm/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -200,6 +200,16 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 }
 
 /*Prakash*/
+
+
+.selectOptionAlign {
+	margin: 5px auto;
+}
+
+.num-text-align {
+	text-align: right;
+}
+
 .ui-selectonemenu-label {
 	font-size: 17px!important;
 }
@@ -224,9 +234,42 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 	padding: 9px 0;
 }
 
+@media (min-width: 1200px) {
+	.StepsQuestionsFSpg3 {
+	margin-top: 70px!important;
+	}
+	
+	.StepsQuestionsFSpg2 {
+	margin: 130px 0!important;
+	}
+	
+	.PieGraphPosition {
+	margin: 50px 0!important;
+	}
+}
+
+@media (max-width: 560px) {
+	.ZeroPaddingBottom {
+    padding-bottom: 0px!important;
+}
+
+.ZeroPaddingBottom > .ui-column-title {
+    position: absolute;
+}
+
+.ZeroPaddingBottom > button {
+    width: 100%;
+}
+
+.HideMobileMode {
+	display:none!important;
+}
+}
+
+
 @media (max-width: 960px) and (min-width: 640px) {
 	.mobileFullWidth {
-    display: inline;
+   // display: inline;
 }
 	
 	.UsernameDashboard {
@@ -255,10 +298,10 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 .ui-selectonemenu {
     margin-left: 0px;
 }
-	.mobileFullWidth {
-	width:100%;
-	    margin: 5px 0;
-	}
+
+.input_investwid1 > input {
+	width: 20%!important;
+}
 	
 .UsernameDashboard {
 	padding: 5px 0;
@@ -281,7 +324,7 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 	.dropdownInputFullWidth {
     width: 100%!important;
     padding: 0px 0!important;
-}
+} 
 	
 	.mobileFullWidthinput {
 	    width: 100%!important;
@@ -329,7 +372,7 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 	}
 }
 
-/*Steps-tab-center-alligned*/
+/*Steps-tab-center-alligned
 @media (max-width: 361px) and (min-width: 320px) {
 	.tab_main > div {
 	margin: 0 auto;
@@ -449,4 +492,4 @@ a.ui-menuitem-link.ui-corner-all {
     width: 846px;
 	}
 }
-/**/
+*/
