--- a/tcm/modules/web/src/main/webapp/template/common/modena/nolayout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/modena/nolayout.xhtml
@@ -27,7 +27,7 @@
     <h:outputStylesheet name="css/font-modena.css" library="modena-layout"/>
     <h:outputStylesheet name="css/invessence.css" library="invessence"/>
     <ui:fragment rendered="#{uiLayout.customCSS != null}">
-        <h:outputStylesheet name="#{uiLayout.customCSS}" library="#{uiLayout.customDIR}"/>
+        <h:outputStylesheet name="#{uiLayout.customCSS}" library="#{uiLayout.consumerDIR}"/>
     </ui:fragment>
 
 </ui:composition>
