--- a/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -24,7 +24,7 @@
                     <li class="fa fa-ellipsis-v menu-separator"></li>
                     <li>
                         <ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
-                            <a class="Animated05 CursPointer"><i class="fa fa-cog"></i> Setting</a>
+                            <a class="Animated05 CursPointer Marbottom"><i class="fa fa-cog"></i> Setting</a>
                             <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
                                 <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
                             </ul>
