--- a/tcm/modules/web/src/main/webapp/template/common/simple.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/simple.xhtml
@@ -5,6 +5,11 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
+<f:metadata>
+    <f:viewParam name="advisor" value="#{webutil.uiprofile.advisor}"/>
+    <f:viewParam name="rep" value="#{webutil.uiprofile.rep}"/>
+</f:metadata>
+
 <h:head>
     <f:facet name="first">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
