--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -129,6 +129,24 @@ margin-bottom: 10px;
 /**/
 
 /*Prakash*/
+
+.Container45 {
+	width: 45%;
+}
+
+.ui-selectoneradio > tbody > tr >td {
+    border: 0!important;
+}
+
+
+.paddingFA {
+	padding: 0 5px;
+}
+
+.tcmAccordion
+Panel-UI > div {
+	overflow: hidden!important;
+}
 .tcm-graphType {
     font-size: 16px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.14);
@@ -178,49 +196,80 @@ background: url("/javax.faces.resource/images/dropdown.png.xhtml?ln=tcm")!import
     background-size: 100% 100%!important;
 }
 /**/
-/* Fund Account changes
+
+/*Fund Account changes*/
+
+.tcmPanel-UI {
+	border-radius: 0px;
+	border-top: 4px solid #05AF6C;
+}
+
+.ui-color {
+	color: #778D9B;
+}
+
+.FontNormal {
+	font-weight: normal;
+}
+
+.textAlign {
+	text-align: center;
+	text-align: -webkit-center;
+	text-align: -moz-center;
+}
+
+.FundAccountStepsPanel > ul > li > a > span.ui-steps-title {
+	visibility: hidden;
+}
+
+.tcmAccordionPanel-UI > div > div > ul > li >a  {
+	font-weight: normal!important;
+	color: #8F9D9D!important;
+}
+
 .FundAccountStepsPanel {
     width: 846px;
     padding-top: 20px;
     margin: 0px auto;
+    min-height: 1px!important;
 }
 
 .FundAccountStepsPanel > ul >.ui-state-default {
-	background-color: #A6A6A6!important;
+	background-color: #80D0B2!important
 }
 
 .FundAccountStepsPanel > ul >.ui-state-default > a > .ui-steps-number
 {
 	background-color: #A6A6A6!important;
 }
-.ui-state-highlight {
+.FundAccountStepsPanel > ul > .ui-state-highlight {
 	position: relative;
     top: -2px;
       background: #EDD9C0!important;
     border-radius: 0px!important;
 }
 
-.ui-state-highlight > a {
-margin: -1px;
+.FundAccountStepsPanel > ul > .ui-state-highlight > a {
+margin-top: -1px!important;
     position: relative;
     top: -3px;
     }
 
-.ui-menuitem-link  {
+.FundAccountStepsPanel > ul > li > .ui-menuitem-link  {
 	margin-top: -6px;
 }
 
-.ui-steps-number {
+.FundAccountStepsPanel > ul > li > a > .ui-steps-number {
 	border-radius: 20px!important;
     width: 20px!important;
         background: #EDD9C0!important;
 }
 
-.ui-steps .ui-state-highlight .ui-steps-number {
-    background-color: #EDD9C0 !important;
+.FundAccountStepsPanel > ul > .ui-state-highlight, .FundAccountStepsPanel > ul > li > a > .ui-steps-number {
+    background-color: #0BA769 !important;
 }
 
-.ui-steps-title {
+.FundAccountStepsPanel > ul > li > a >.ui-steps-title {
 	    font-size: 13px;
 }
 
@@ -283,17 +332,17 @@ left: 10px;
 }
 
 .ui-accordion-header {
-    background-color: #a6a6a6!important;
+    background-color: #005936!important;
     text-transform: uppercase!important;
 }
 
-.ui-accordion .ui-state-hover, .ui-accordion .ui-state-active {
-    background-color: #edd9c0!important;
+tcmAccordionPanel-UI > .ui-accordion .ui-state-hover, .ui-accordion .ui-state-active {
+    background-color: #05AF6C!important;
     color: #FFFFFF!important;
 }
 
 .ui-tabs-top .ui-tabs-nav {
-	background: #d9d9d9!important;
+	background: #8F9D9D!important;
 }
 
 .ui-accordion .ui-accordion-header .ui-icon {
@@ -345,7 +394,6 @@ left: initial;
     padding: 10px 15px!important;
     font-size: 20px!important;	
 }
-*/
 /*****************************************/
 .MarginSpaceP3 {
 	margin: 20px 0;
@@ -458,20 +506,20 @@ padding: 8px 33px!important;
    // padding: 15px;
 }
 /*fundAccountRemove*/
-a.ui-menuitem-link.ui-corner-all {
+.portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
     background: transparent!important;
 }
 
-span.ui-steps-title {
+.portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title {
     padding-top: 12px;
     font-size: 13px;
 }
 
-.ui-steps .ui-steps-item {
+.portfolioCreationStepsPanel > ul > .ui-steps-item {
     background-color: #0BA769!important;
     }
 
-span.ui-steps-number {
+.portfolioCreationStepsPanel > ul > li > a > span.ui-steps-number {
     display: none!important;
     visibility: hidden;
 }
@@ -530,7 +578,7 @@ h3 {
 
 /*Steps-tab-center-alligned*/
 @media (max-width: 361px) and (min-width: 320px) {
-	.ui-steps .ui-steps-item {
+	.portfolioCreationStepsPanel .portfolioCreationStepsPanel > ul > .ui-steps-item {
     padding: 0 10px!important;
 	}
 	
@@ -543,13 +591,14 @@ h3 {
 	padding: 20px 0px 0px 0px!important;
 	}
 	
-	a.ui-menuitem-link.ui-corner-all {
+	.portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
     background: #F6FAFC;
+        width: 20px;
 }
 }
 
 @media (max-width: 481px) and (min-width: 361px) {
-	.ui-steps .ui-steps-item {
+	.portfolioCreationStepsPanel .portfolioCreationStepsPanel > ul > .ui-steps-item {
     padding: 0 11px!important;
 	}
 	
@@ -561,13 +610,14 @@ h3 {
 	.tab_main {
 	padding: 20px 0px 0px 0px!important;
 	}
-a.ui-menuitem-link.ui-corner-all {
+.portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
     background: #F6FAFC;
+        width: 22px;
 }
 }
 
 @media (max-width: 560px) and (min-width: 481px) {
-	.ui-steps .ui-steps-item {
+	.portfolioCreationStepsPanel .portfolioCreationStepsPanel > ul > .ui-steps-item {
     padding: 0 12px;
 }
 	
@@ -575,6 +625,10 @@ a.ui-menuitem-link.ui-corner-all {
 	margin: 0 auto;
     width: 227px;
 	}
+	
+	.portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+    width: 24px;
+}
 	
 	.tab_main {
 	padding: 20px 0px 0px 0px!important;
@@ -591,7 +645,7 @@ a.ui-menuitem-link.ui-corner-all {
 	padding: 20px 0px 0px 0px!important;
 	}
 	
-	span.ui-steps-title {
+	.portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title {
     visibility: hidden;
 }
 }
@@ -606,7 +660,7 @@ a.ui-menuitem-link.ui-corner-all {
 	padding: 20px 0px 0px 0px!important;
 	}
 	
-	.ui-steps-title {
+	.portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title {
     visibility: hidden;
 }
 }
@@ -620,7 +674,7 @@ a.ui-menuitem-link.ui-corner-all {
 	.tab_main {
 	padding: 20px 0px 0px 0px!important;
 	}
-	.ui-steps-title {
+	.portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title  {
     font-size: 12px!important;
 }
 }
@@ -630,6 +684,10 @@ a.ui-menuitem-link.ui-corner-all {
 	margin: 0 auto;
     width: 455px;
 	}
+	
+	.portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+    width: 70px;
+}
 	
 	.tab_main {
 	padding: 20px 0px 0px 0px!important;
@@ -661,6 +719,173 @@ a.ui-menuitem-link.ui-corner-all {
 	}
 }
 /**/
+/**/
+
+/*Steps-tab-center-alligned (Fund Account)*/
+@media (max-width: 361px) and (min-width: 320px) {
+	.FundAccountStepsPanel .FundAccountStepsPanel > ul > .ui-steps-item {
+    padding: 0 10px!important;
+	}
+	
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 252px;
+	}
+	
+	.FundAccountStepsPanel > ul > .ui-state-highlight {
+    position: relative; 
+     top: 0;
+    background: none!important; 
+    border-radius: none!important; 
+}
+	.FundAccountStepsPanel > ul > .ui-state-highlight > a {
+    margin-top: 0px!important;
+    top: -5px;
+}
+	
+	
+	.FundAccountStepsPanel > ul > li > a > .ui-steps-number {
+    border-radius: 20px!important;
+    width: 11px!important;
+	}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+	
+	.FundAccountStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+    background: #F6FAFC;
+}
+}
+
+@media (max-width: 481px) and (min-width: 361px) {
+	.FundAccountStepsPanel .FundAccountStepsPanel > ul > .ui-steps-item {
+    padding: 0 11px!important;
+	}
+	
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 300px;
+	}
+	
+	.FundAccountStepsPanel > ul > li > a > .ui-steps-number {
+    border-radius: 20px!important;
+    width: 15px!important;
+	}
+	
+	.FundAccountStepsPanel > ul > .ui-state-highlight {
+    position: relative; 
+     top: 0;
+    background: none!important; 
+    border-radius: none!important; 
+}
+	.FundAccountStepsPanel > ul > .ui-state-highlight > a {
+    margin-top: 0px!important;
+    top: -5px;
+}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+.FundAccountStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+    background: #F6FAFC;
+}
+}
+
+@media (max-width: 560px) and (min-width: 481px) {
+	.FundAccountStepsPanel .FundAccountStepsPanel > ul > .ui-steps-item {
+    padding: 0 12px;
+}
+	
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 330px;
+	}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+}
+
+@media (max-width: 640px) and (min-width: 561px) {
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 366px;
+	}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+	
+	.FundAccountStepsPanel > ul > li > a > span.ui-steps-title {
+    visibility: hidden;
+}
+}
+
+@media (max-width: 729px) and (min-width: 641px) {
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 426px;
+	}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+	
+	.FundAccountStepsPanel > ul > li > a > span.ui-steps-title {
+    visibility: hidden;
+}
+}
+
+@media (max-width: 770px) and (min-width: 730px) {
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 430px;
+	}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+	.portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title  {
+    font-size: 12px!important;
+}
+}
+
+@media (max-width: 960px) and (min-width: 771px) {
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 546px;
+	}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+}
+
+@media (max-width: 999px) and (min-width: 961px) {
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 666px;
+	}
+	
+	.FundAccountTab {
+	padding: 20px 0px 0px 0px!important;
+	}
+}
+
+@media (max-width: 1320px) and (min-width: 1000px) {
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 636px;
+	}
+}
+
+@media (min-width: 1321px) {
+	.FundAccountTab > div {
+	margin: 0 auto;
+    width: 846px;
+	}
+}
 /**/
 
 /*vivek CSS */
